--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cssnano-preset-default": "^5.2.7",
     "html-minimizer-webpack-plugin": "^3.5.0",
     "html-webpack-plugin": "^5.5.0",
+    "loader-css": "^0.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
